DestinationRule.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: loginapi-dr
spec:
  host: loginapi
  subsets:
  - name: v1
    labels:
      version: v1
