VirtualService.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: login20-dummy-virtualservice
spec:
  hosts:
  - "*"
  gateways:
  - login20-dummy-gateway
  http:
  - match:
    - uri:
        prefix: /productpage
    route:
    - destination:
        host: productpage
        port:
          number: 8080
